# mini-bream

./: .gitignore  .gitmodules  README.md  Running a mission.md  sync_ws.sh
docs/: deployment.md  ground_station_setup.md  port_to_new_rpi.md
scripts/: launch_everything_tmux.sh
src/: requirements.txt
src/autonomous_catamaran_ws/src/: README.md
src/autonomous_catamaran_ws/src/backseat/: CMakeLists.txt  package.xml
src/autonomous_catamaran_ws/src/backseat/action/: DoMission.action
src/autonomous_catamaran_ws/src/backseat/launch/: mission.launch
src/autonomous_catamaran_ws/src/backseat/msg/: loc.msg  locg.msg  telem.msg
src/autonomous_catamaran_ws/src/backseat/src/: DataLogger.py  NavigationTools.py  PathFollower.py  PathPlannerNode.py
src/autonomous_catamaran_ws/src/frontseat/: CMakeLists.txt  package.xml
src/autonomous_catamaran_ws/src/frontseat/launch/: all.launch
src/autonomous_catamaran_ws/src/frontseat/src/: ImuNode.py  JoystickHandlerNode.py  MotorControllerNode.py  ThrustSourceSelectorNode.py
src/autonomous_catamaran_ws/src/mission_planner/: README.md  package.xml
src/autonomous_catamaran_ws/src/mission_planner/launch/: action_client.launch
src/autonomous_catamaran_ws/src/mission_planner/missions/Meredith_vrx_simulator/: mission_scale_1.csv  params.yaml
src/autonomous_catamaran_ws/src/mission_planner/missions/Rendezvouz_paper_params/: mission.csv  params.yaml
src/autonomous_catamaran_ws/src/mission_planner/missions/default/: mission.csv
src/autonomous_catamaran_ws/src/mission_planner/missions/field_test_jun_18_Rendezvouz_paper_params/: params.yaml
src/autonomous_catamaran_ws/src/mission_planner/missions/field_test_jun_7_Rendezvouz_paper_params/: mission.csv
src/autonomous_catamaran_ws/src/mission_planner/missions/field_test_jun_9_Rendezvouz_paper_params/: params.yaml
src/autonomous_catamaran_ws/src/mission_planner/missions/kepner_L/: params.yaml
src/autonomous_catamaran_ws/src/mission_planner/other_mission_formats/gps_based/Meredith/: Meredith_scale_0_3__gps_to_xyMeredith_scale_0_3.csv  Meredith_scale_1.csv  Meredith_scale_1__gps_to_xy.csv
src/autonomous_catamaran_ws/src/mission_planner/other_mission_formats/gps_based/vrx_gazebo/: vrx_gazebo.csv
src/autonomous_catamaran_ws/src/mission_planner/other_mission_formats/xy_based/: Meredith_scale_0_3__gps_to_xyMeredith_scale_0_3__gps_init_at_vrx_gazebo.csv  Meredith_scale_1__gps_to_xy__gps_init_at_vrx_gazebo.csv  NEE_xy.csv  circle_xy__gps_init_kepner.csv  circle_xy__gps_init_lakefield.csv  rendezvous_paper.csv  rendezvous_paper__gps_init_at_kepnerEntrance_jun8.csv  rendezvous_paper__gps_init_at_lakefield_jun18.csv  rendezvous_paper__gps_init_at_vrx_gazebo.csv  simpler_dubins_generated_v1_05_31_2024__gps_init_at_vrx_gazebo.csv  triangle_circled__gps_init_at_vrx_gazebo.csv
src/autonomous_catamaran_ws/src/mission_planner/src/: nav_goal_to_waypoint.py  randomGoal.py  xy_to_gps.py
src/autonomous_catamaran_ws/src/visualization_tools/: CMakeLists.txt  package.xml
src/autonomous_catamaran_ws/src/visualization_tools/launch/: visuals.launch
src/autonomous_catamaran_ws/src/visualization_tools/src/: RvizVisualsAdapter.py
src/autonomous_catamaran_ws/src/visualization_tools/visualizers_config/rviz_config/: trajectory.rviz
src/docker/: Dockerfile  docker-compose.yml  rosdeps.sh  startup.sh
src/ros2_ws/: rosdeps.sh
src/ros2_ws/src/backseat/backseat/: package.xml  setup.cfg
src/ros2_ws/src/backseat/backseat/backseat/: NavigationTools.py  PathFollower.py  PathPlannerNode.py  PathPlannerNode_ROS1.py
src/ros2_ws/src/backseat/backseat/backseat/Missions/default/: params.yaml
src/ros2_ws/src/backseat/backseat/backseat/params/: vrx.yaml
src/ros2_ws/src/backseat/backseat_msgs/: package.xml
src/ros2_ws/src/frontseat/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/frontseat/frontseat/: ImuFromGPS.py  ImuNode.py  JoystickHandlerNode.py  MotorControllerNode.py  ThrustSourceSelectorNode.py  qos_profiles.py
src/ros2_ws/src/joystick_control/: package.xml  setup.py
src/ros2_ws/src/joystick_control/joystick_control/: joystick_controller.py  qos_profiles.py
src/ros2_ws/src/joystick_control/launch/: joystick.launch.py
src/ros2_ws/src/linc_gz/: CMakeLists.txt  package.xml
src/ros2_ws/src/mission_planner/: package.xml  setup.py
src/ros2_ws/src/mission_planner/launch/: action_client.launch.py
src/ros2_ws/src/mission_planner/mission_planner/: nav_goal_to_waypoint.py  randomGoal.py
src/ros2_ws/src/mission_planner/mission_planner/converters/: gps_to_xy.py
src/ros2_ws/src/mission_planner/missions/: vrx.csv
src/ros2_ws/src/mission_planner/missions/Meredith_lake_harner/: mission.csv
src/ros2_ws/src/mission_planner/missions/Meredith_vrx_simulator/: mission.csv
src/ros2_ws/src/mission_planner/missions/field_test_jun_18_Rendezvouz_paper_params/: mission.csv
src/ros2_ws/src/mission_planner/missions/kepner_L/: mission.csv
src/ros2_ws/src/mission_planner/missions/kepner_entrance/: mission.csv
src/ros2_ws/src/mission_planner/other_mission_formats/gps_based/: Kepner_two_points_east.csv
src/ros2_ws/src/mission_planner/other_mission_formats/gps_based/Meredith/: Meredith_scale_0_3.csv
src/ros2_ws/src/mission_planner/other_mission_formats/gps_based/vrx_gazebo/: vrx_gazebo_circle.csv  vrx_gazebo_triangle.csv  vrx_gazebo_triangle_large.csv  vrx_gazebo_triangle_small.csv
src/ros2_ws/src/mission_planner/other_mission_formats/xy_based/: Meredith_scale_0_3__gps_to_xyMeredith_scale_0_3__gps_init_at_lakefield_jun18.csv  NEE_xy__gps_init_at_kepnerEntrance.csv  NEE_xy__gps_init_at_lakefield_may23.csv  NEE_xy__gps_init_at_vrx_gazebo.csv  circle_xy.csv  circle_xy__gps_init_kepner2.csv  dubins_generated_v1_05_31_2024.csv  dubins_generated_v1_05_31_2024__gps_init_at_vrx_gazebo.csv  triangle_circled.csv
src/ros2_ws/src/path_follower/backseat_msgs/: CMakeLists.txt
src/ros2_ws/src/path_follower/backseat_msgs/action/: DoMission.action
src/ros2_ws/src/visualization_tools/: package.xml  setup.py
src/ros2_ws/src/waypoint_follower/: package.xml  setup.py
(+51 files in other folders)
